crates/pg_syntax/tests/snapshots/postgres_regress/partition_join@527.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO plt1_adv SELECT i, i, to_char(i % 5, 'FM0000') FROM generate_series(0, 24) i;"
---
InsertStmt@0..89
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..20
    Ident@12..20 "plt1_adv"
  Whitespace@20..21 " "
  SelectStmt@21..88
    Select@21..27 "SELECT"
    Whitespace@27..28 " "
    ResTarget@28..29
      ColumnRef@28..29
        Ident@28..29 "i"
    Ascii44@29..30 ","
    Whitespace@30..31 " "
    ResTarget@31..32
      ColumnRef@31..32
        Ident@31..32 "i"
    Ascii44@32..33 ","
    Whitespace@33..34 " "
    ResTarget@34..57
      FuncCall@34..57
        Ident@34..41 "to_char"
        Ascii40@41..42 "("
        AExpr@42..47
          ColumnRef@42..43
            Ident@42..43 "i"
          Whitespace@43..44 " "
          Ascii37@44..45 "%"
          Whitespace@45..46 " "
          AConst@46..47
            Iconst@46..47 "5"
        Ascii44@47..48 ","
        Whitespace@48..49 " "
        AConst@49..57
          Sconst@49..57 "'FM0000'"
    Ascii41@57..58 ")"
    Whitespace@58..59 " "
    From@59..63 "FROM"
    Whitespace@63..64 " "
    RangeFunction@64..88
      List@64..85
        FuncCall@64..85
          Ident@64..79 "generate_series"
          Ascii40@79..80 "("
          AConst@80..81
            Iconst@80..81 "0"
          Ascii44@81..82 ","
          Whitespace@82..83 " "
          AConst@83..85
            Iconst@83..85 "24"
      Ascii41@85..86 ")"
      Whitespace@86..87 " "
      Alias@87..88
        Ident@87..88 "i"
  Ascii59@88..89 ";"

