crates/pg_syntax/tests/snapshots/postgres_regress/partition_join@53.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: CREATE INDEX iprt1_e_p1_ab2 on prt1_e_p1(((a+b)/2));
---
IndexStmt@0..52
  Create@0..6 "CREATE"
  Whitespace@6..7 " "
  Index@7..12 "INDEX"
  Whitespace@12..13 " "
  Ident@13..27 "iprt1_e_p1_ab2"
  Whitespace@27..28 " "
  On@28..30 "on"
  Whitespace@30..31 " "
  RangeVar@31..40
    Ident@31..40 "prt1_e_p1"
  Ascii40@40..41 "("
  Ascii40@41..42 "("
  Ascii40@42..43 "("
  IndexElem@43..49
    AExpr@43..49
      AExpr@43..46
        ColumnRef@43..44
          Ident@43..44 "a"
        Ascii43@44..45 "+"
        ColumnRef@45..46
          Ident@45..46 "b"
      Ascii41@46..47 ")"
      Ascii47@47..48 "/"
      AConst@48..49
        Iconst@48..49 "2"
  Ascii41@49..50 ")"
  Ascii41@50..51 ")"
  Ascii59@51..52 ";"

