crates/pg_syntax/tests/snapshots/postgres_regress/partition_join@532.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO plt2_adv SELECT i, i, to_char(i % 5, 'FM0000') FROM generate_series(0, 24) i WHERE i % 5 IN (2, 3, 4);"
---
InsertStmt@0..114
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..20
    Ident@12..20 "plt2_adv"
  Whitespace@20..21 " "
  SelectStmt@21..112
    Select@21..27 "SELECT"
    Whitespace@27..28 " "
    ResTarget@28..29
      ColumnRef@28..29
        Ident@28..29 "i"
    Ascii44@29..30 ","
    Whitespace@30..31 " "
    ResTarget@31..32
      ColumnRef@31..32
        Ident@31..32 "i"
    Ascii44@32..33 ","
    Whitespace@33..34 " "
    ResTarget@34..57
      FuncCall@34..57
        Ident@34..41 "to_char"
        Ascii40@41..42 "("
        AExpr@42..47
          ColumnRef@42..43
            Ident@42..43 "i"
          Whitespace@43..44 " "
          Ascii37@44..45 "%"
          Whitespace@45..46 " "
          AConst@46..47
            Iconst@46..47 "5"
        Ascii44@47..48 ","
        Whitespace@48..49 " "
        AConst@49..57
          Sconst@49..57 "'FM0000'"
    Ascii41@57..58 ")"
    Whitespace@58..59 " "
    From@59..63 "FROM"
    Whitespace@63..64 " "
    RangeFunction@64..88
      List@64..85
        FuncCall@64..85
          Ident@64..79 "generate_series"
          Ascii40@79..80 "("
          AConst@80..81
            Iconst@80..81 "0"
          Ascii44@81..82 ","
          Whitespace@82..83 " "
          AConst@83..85
            Iconst@83..85 "24"
      Ascii41@85..86 ")"
      Whitespace@86..87 " "
      Alias@87..88
        Ident@87..88 "i"
    Whitespace@88..89 " "
    Where@89..94 "WHERE"
    Whitespace@94..95 " "
    AExpr@95..112
      AExpr@95..100
        ColumnRef@95..96
          Ident@95..96 "i"
        Whitespace@96..97 " "
        Ascii37@97..98 "%"
        Whitespace@98..99 " "
        AConst@99..100
          Iconst@99..100 "5"
      Whitespace@100..101 " "
      InP@101..103 "IN"
      Whitespace@103..104 " "
      Ascii40@104..105 "("
      List@105..112
        AConst@105..106
          Iconst@105..106 "2"
        Ascii44@106..107 ","
        Whitespace@107..108 " "
        AConst@108..109
          Iconst@108..109 "3"
        Ascii44@109..110 ","
        Whitespace@110..111 " "
        AConst@111..112
          Iconst@111..112 "4"
  Ascii41@112..113 ")"
  Ascii59@113..114 ";"

